--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "react-dom": "^18.2.0",
     "react-hook": "^0.0.1",
     "react-hook-form": "^7.43.5",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
