--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
     "switch": "^0.0.0",
     "web-vitals": "^2.1.4"
   },
